--- a/Smack/View/Base.lproj/Main.storyboard
+++ b/Smack/View/Base.lproj/Main.storyboard
@@ -162,6 +162,9 @@
                                 <state key="normal" title="Don't have an  account? Sign up here">
                                     <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="createAccountBtnPressed:" destination="H61-0I-a5g" eventType="touchUpInside" id="8ax-wM-C33"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="2bw-fJ-k9G">
                                 <rect key="frame" x="62.5" y="160" width="250" height="86"/>
@@ -236,10 +239,167 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Q7D-jO-MYZ"/>
                     </view>
+                    <connections>
+                        <segue destination="uxU-bF-Pei" kind="show" identifier="toCreateAccount" id="ZvY-II-Abh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xab-XJ-Clt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2392.8000000000002" y="-386.35682158920542"/>
+        </scene>
+        <!--Create AccountVC-->
+        <scene sceneID="oT1-FU-nbc">
+            <objects>
+                <viewController id="uxU-bF-Pei" customClass="CreateAccountVC" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aOV-Y5-zSl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create an account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cuj-0R-uCx">
+                                <rect key="frame" x="104" y="60" width="167" height="23"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
+                                <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9hQ-MR-jpa">
+                                <rect key="frame" x="331" y="28" width="28" height="28"/>
+                                <state key="normal" image="closeButton"/>
+                                <connections>
+                                    <action selector="closeBtnPressed:" destination="uxU-bF-Pei" eventType="touchUpInside" id="BM9-KP-a41"/>
+                                    <action selector="closeBtnPressed:" destination="H61-0I-a5g" eventType="touchUpInside" id="FHM-se-3CQ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TQd-cj-jni">
+                                <rect key="frame" x="62.5" y="597" width="250" height="50"/>
+                                <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="5pr-uU-ifK"/>
+                                    <constraint firstAttribute="height" constant="50" id="MCs-Ym-OCZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Create Account">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Je6-Ex-nWb">
+                                <rect key="frame" x="137.5" y="299" width="100" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="FXc-pI-xB5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                <state key="normal" title="Choose avatar">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="createAccountBtnPressed:" destination="H61-0I-a5g" eventType="touchUpInside" id="cXv-uk-aUD"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="1mH-FY-Iw5">
+                                <rect key="frame" x="62.5" y="123" width="250" height="136"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oJG-fw-Haz">
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="xab-DQ-Xj6"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NfB-FO-bI9">
+                                        <rect key="frame" x="0.0" y="34" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="TeH-oU-v4P"/>
+                                            <constraint firstAttribute="height" constant="2" id="ttr-fW-Bqj"/>
+                                        </constraints>
+                                    </view>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cMf-kO-BP6">
+                                        <rect key="frame" x="0.0" y="50" width="250" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="7cY-2r-3KF"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="80B-M9-m3a">
+                                        <rect key="frame" x="0.0" y="84" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="5SX-qi-nGA"/>
+                                            <constraint firstAttribute="width" constant="250" id="bMa-Nl-X6n"/>
+                                        </constraints>
+                                    </view>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="42y-Ai-Q2x">
+                                        <rect key="frame" x="0.0" y="100" width="250" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="Rqn-dL-F4L"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KGZ-BU-QGK">
+                                        <rect key="frame" x="0.0" y="134" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="YX3-Wd-UpN"/>
+                                            <constraint firstAttribute="width" constant="250" id="u1n-or-I3E"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="BgS-61-kFb">
+                                <rect key="frame" x="137.5" y="299" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="O8V-f8-LSk"/>
+                                    <constraint firstAttribute="height" constant="100" id="kjJ-s0-Rid"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Ge-LO-Ef8">
+                                <rect key="frame" x="62.5" y="433" width="250" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="9tA-VI-XVg"/>
+                                    <constraint firstAttribute="width" constant="250" id="p8d-2q-g6j"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                <state key="normal" title="Generate background color">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="createAccountBtnPressed:" destination="H61-0I-a5g" eventType="touchUpInside" id="Xhk-Ox-oP8"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="y4x-UW-Kca" firstAttribute="trailing" secondItem="9hQ-MR-jpa" secondAttribute="trailing" constant="16" id="1tq-J1-iLs"/>
+                            <constraint firstItem="1mH-FY-Iw5" firstAttribute="top" secondItem="Cuj-0R-uCx" secondAttribute="bottom" constant="40" id="3rx-a2-rPd"/>
+                            <constraint firstItem="BgS-61-kFb" firstAttribute="centerX" secondItem="aOV-Y5-zSl" secondAttribute="centerX" id="66b-Nk-12E"/>
+                            <constraint firstItem="9hQ-MR-jpa" firstAttribute="top" secondItem="y4x-UW-Kca" secondAttribute="top" constant="8" id="CUI-Pa-8d3"/>
+                            <constraint firstItem="BgS-61-kFb" firstAttribute="top" secondItem="1mH-FY-Iw5" secondAttribute="bottom" constant="40" id="CVq-CC-L4Q"/>
+                            <constraint firstItem="9Ge-LO-Ef8" firstAttribute="top" secondItem="Je6-Ex-nWb" secondAttribute="bottom" constant="4" id="ELK-jU-F8M"/>
+                            <constraint firstItem="Cuj-0R-uCx" firstAttribute="centerX" secondItem="aOV-Y5-zSl" secondAttribute="centerX" id="K8d-Zb-IGB"/>
+                            <constraint firstItem="9Ge-LO-Ef8" firstAttribute="centerX" secondItem="aOV-Y5-zSl" secondAttribute="centerX" id="NTT-X6-hyW"/>
+                            <constraint firstItem="Je6-Ex-nWb" firstAttribute="width" secondItem="BgS-61-kFb" secondAttribute="width" id="eIq-GJ-sg0"/>
+                            <constraint firstItem="TQd-cj-jni" firstAttribute="centerX" secondItem="aOV-Y5-zSl" secondAttribute="centerX" id="eVt-JE-RBX"/>
+                            <constraint firstItem="Je6-Ex-nWb" firstAttribute="centerX" secondItem="aOV-Y5-zSl" secondAttribute="centerX" id="gH2-R1-Rsy"/>
+                            <constraint firstItem="Cuj-0R-uCx" firstAttribute="top" secondItem="y4x-UW-Kca" secondAttribute="top" constant="40" id="jwN-N8-8e8"/>
+                            <constraint firstItem="Je6-Ex-nWb" firstAttribute="top" secondItem="BgS-61-kFb" secondAttribute="top" id="lCA-Hn-iUR"/>
+                            <constraint firstItem="1mH-FY-Iw5" firstAttribute="centerX" secondItem="aOV-Y5-zSl" secondAttribute="centerX" id="wwJ-Vr-vbQ"/>
+                            <constraint firstItem="y4x-UW-Kca" firstAttribute="bottom" secondItem="TQd-cj-jni" secondAttribute="bottom" constant="20" id="zCj-7V-JQR"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="y4x-UW-Kca"/>
+                    </view>
+                    <connections>
+                        <segue destination="H0P-MU-avH" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="vWq-3u-pNf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="85n-Im-UYt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="H0P-MU-avH" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="3205.5999999999999" y="-386.35682158920542"/>
         </scene>
         <!--ChatVC-->
         <scene sceneID="V5W-X7-LUQ">
@@ -298,6 +458,7 @@
         <image name="addChannelButton" width="22" height="22"/>
         <image name="closeButton" width="28" height="28"/>
         <image name="menuProfileIcon" width="99" height="99"/>
+        <image name="profileDefault" width="192" height="192"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
     </resources>
